--- a/styles.css
+++ b/styles.css
@@ -309,11 +309,32 @@ footer h3 {
 }
 
 .product__pay {
-	width: 30%;
+	width: 25%;
 	margin-top: -8px;
 	height: 21%;
 	float: right;
 	background-color: green;
+}
+
+.radio{
+	border:1px solid black;
+	background-color:gray;
+	border-radius:30px;
+	width:50px;
+	height:50px;
+	display:inline-block;
+	margin-left:50px;
+	margin-right:50px;
+}
+.radio-container{
+	display:flex;
+	background-color:transparent;
+	flex-basis:100%;
+	width:100%;
+	height:70px;
+	flex-wrap:no-wrap;
+	justify-content:center;
+	align-items:center;
 }
 
 .sale {
@@ -323,6 +344,20 @@ footer h3 {
 	background-color: rgba(0, 120, 201, 0.7);
 	margin: 100px 2%;
 }
+.block-sale{
+	position:relative;
+	display:flex;
+	flex-wrap:wrap;
+	flex-basis:100%;
+	min-width:100%;
+	width:100%;
+	justify-content: space-around;
+}
+.wrapper-sale{
+	display:flex;
+	flex-wrap:no-wrap;
+	overflow-x:hidden;
+}
 
 .product {
 	flex-basis: 25%;
@@ -330,6 +365,8 @@ footer h3 {
 	border: 1px solid black;
 	background-color: white;
 	min-width: 250px;
+	margin-left:30px;
+	margin-right:30px;
 }
 
 
