--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@ h1 {
 	top: 25%;
 	width: 50%;
 	height: 40%;
-	display: none;
+	display: block;
 	border: 1px solid black;
 	background-color: white;
 	text-align: center;
